Removed scaffold and begin to build structure of app

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,18 @@
   </head>
   <body ng-app="itcFrontendApp">
 
+
+
+  <div class="header"></div>
+  <div class="page-container">
+    <div ng-view></div>
+  </div>
+  <div class="footer"></div>
+
+
+
+
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -45,8 +57,8 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/news.js"></script>
     <!-- endbuild -->
 </body>
 </html>
