--- a/app/index.html
+++ b/app/index.html
@@ -60,15 +60,15 @@
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+   <script>
+     !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+     (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+     }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+     ga('create', 'UA-XXXXX-X');
+     ga('send', 'pageview');
+  </script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -87,8 +87,15 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/clubrelays.js"></script>
+    <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/news.js"></script>
+    <script src="scripts/controllers/prospective_members.js"></script>
+    <script src="scripts/controllers/races.js"></script>
+    <script src="scripts/controllers/results.js"></script>
+    <script src="scripts/controllers/current_members/board_minutes.js"></script>
+    <script src="scripts/controllers/current_members/training_resources.js"></script>
     <!-- endbuild -->
 </body>
 </html>
