Added favicon and header image

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
 
   <div class="header">
     <md-toolbar class="md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
+      <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
+      <span flex></span>
       <a href="#/"><div class="menu-item">Home</div></a>
       <a href="#/news"><div class="menu-item">News</div></a>
       <a href="#/races"><div class="menu-item">Races</div></a>
