--- a/app/index.html
+++ b/app/index.html
@@ -22,41 +22,56 @@
   <body ng-app="itcFrontendApp">
 
 
+  <div class="wrapper">
+    <div class="header">
+      <md-toolbar class="md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
+        <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
+        <span flex></span>
+        <a href="#/"><div class="menu-item">Home</div></a>
+        <a href="#/news"><div class="menu-item">News</div></a>
+        <a href="#/races"><div class="menu-item">Races</div></a>
+        <a href="#/clubrelays"><div class="menu-item">Club Relays</div></a>
+        <a href="#/results"><div class="menu-item">Results</div></a>
+        <a href="#/prospective_members"><div class="menu-item">Prospective Members</div></a>
+        <a><div class="menu-item">
+          <md-menu>
+            <span ng-click="$mdOpenMenu()">
+              Current Members
+            </span>
+            <md-menu-content>
+              <md-menu-item><md-button href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
+              <md-menu-item><md-button href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
+              <md-menu-item><md-button href="#/current_members/board_minutes">Board Minutes</md-button></md-menu-item>
+              <md-menu-item><md-button href="#/current_members/training_resources">Training Resources</md-button></md-menu-item>
+              <md-menu-item><md-button href="#/current_members/">IXC Constitution</md-button></md-menu-item>
+              <md-menu-item><md-button href="#/current_members/">ITC Constitution</md-button></md-menu-item>
+            </md-menu-content>
+          </md-menu>
+        </div></a>
+        <a href="#/contact"><div class="menu-item">Contact</div></a>
+        
+      </md-toolbar>
+    </div>
 
-  <div class="header">
-    <md-toolbar class="md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
-      <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
-      <span flex></span>
-      <a href="#/"><div class="menu-item">Home</div></a>
-      <a href="#/news"><div class="menu-item">News</div></a>
-      <a href="#/races"><div class="menu-item">Races</div></a>
-      <a href="#/clubrelays"><div class="menu-item">Club Relays</div></a>
-      <a href="#/results"><div class="menu-item">Results</div></a>
-      <a href="#/prospective_members"><div class="menu-item">Prospective Members</div></a>
-      <a><div class="menu-item">
-        <md-menu>
-          <span ng-click="$mdOpenMenu()">
-            Current Members
-          </span>
-          <md-menu-content>
-            <md-menu-item><md-button href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
-            <md-menu-item><md-button href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
-            <md-menu-item><md-button href="#/current_members/board_minutes">Board Minutes</md-button></md-menu-item>
-            <md-menu-item><md-button href="#/current_members/training_resources">Training Resources</md-button></md-menu-item>
-            <md-menu-item><md-button href="#/current_members/">IXC Constitution</md-button></md-menu-item>
-            <md-menu-item><md-button href="#/current_members/">ITC Constitution</md-button></md-menu-item>
-          </md-menu-content>
-        </md-menu>
-      </div></a>
-      <a href="#/contact"><div class="menu-item">Contact</div></a>
-      
-    </md-toolbar>
-  </div>
+    <div class="page-container">
+      <div ng-view></div>
+    </div>
 
-  <div class="page-container">
-    <div ng-view></div>
+    <div class="footer">
+      <div class="centered-content padded-content">
+        <div layout="row" layout-align="center start">
+          <a class="footer-logo" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
+          <a class="footer-logo" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
+          <a class="footer-logo" href=""><i class="ion-social-instagram-outline"></i></a>
+          <a class="footer-logo" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
+        </div>
+        <div class="right-align">
+          <div>Illinois Track Club</div>
+          <div>Built by: </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="footer"></div>
 
    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
    <script>
