--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/config/urls.js"></script>
     <script src="scripts/controllers/clubrelays.js"></script>
     <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/home.js"></script>
