Create API service

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,6 @@
           </md-menu>
         </div></a>
         <a href="#/contact"><div class="menu-item">Contact</div></a>
-        
       </md-toolbar>
     </div>
 
@@ -111,6 +110,7 @@
     <script src="scripts/controllers/results.js"></script>
     <script src="scripts/controllers/current_members/board_minutes.js"></script>
     <script src="scripts/controllers/current_members/training_resources.js"></script>
+    <script src="scripts/services/api.js"></script>
     <!-- endbuild -->
 </body>
 </html>
