--- a/app/index.html
+++ b/app/index.html
@@ -72,46 +72,47 @@
     </div>
   </div>
 
-   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-   <script>
-     !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-     (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-     }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-     ga('create', 'UA-XXXXX-X');
-     ga('send', 'pageview');
+    ga('create', 'UA-53247724-7', 'none');
   </script>
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+  <!-- build:js(.) scripts/vendor.js -->
+  <!-- bower:js -->
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-aria/angular-aria.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/angular-touch/angular-touch.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-material/angular-material.js"></script>
+  <script src="bower_components/SHA-1/sha1.js"></script>
+  <script src="bower_components/angulartics/src/angulartics.js"></script>
+  <script src="bower_components/angulartics-google-analytics/lib/angulartics-ga.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/filters.js"></script>
-    <script src="scripts/config/urls.js"></script>
-    <script src="scripts/controllers/clubrelays.js"></script>
-    <script src="scripts/controllers/contact.js"></script>
-    <script src="scripts/controllers/home.js"></script>
-    <script src="scripts/controllers/news.js"></script>
-    <script src="scripts/controllers/prospective_members.js"></script>
-    <script src="scripts/controllers/races.js"></script>
-    <script src="scripts/controllers/results.js"></script>
-    <script src="scripts/controllers/current_members/board_minutes.js"></script>
-    <script src="scripts/controllers/current_members/training_resources.js"></script>
-    <script src="scripts/services/api.js"></script>
-    <!-- endbuild -->
+  <!-- build:js({.tmp,app}) scripts/scripts.js -->
+  <script src="scripts/app.js"></script>
+  <script src="scripts/filters.js"></script>
+  <script src="scripts/config/urls.js"></script>
+  <script src="scripts/controllers/clubrelays.js"></script>
+  <script src="scripts/controllers/contact.js"></script>
+  <script src="scripts/controllers/home.js"></script>
+  <script src="scripts/controllers/news.js"></script>
+  <script src="scripts/controllers/prospective_members.js"></script>
+  <script src="scripts/controllers/races.js"></script>
+  <script src="scripts/controllers/results.js"></script>
+  <script src="scripts/controllers/current_members/board_minutes.js"></script>
+  <script src="scripts/controllers/current_members/training_resources.js"></script>
+  <script src="scripts/services/api.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
