--- a/app/index.html
+++ b/app/index.html
@@ -96,12 +96,16 @@
   <script src="bower_components/SHA-1/sha1.js"></script>
   <script src="bower_components/angulartics/src/angulartics.js"></script>
   <script src="bower_components/angulartics-google-analytics/lib/angulartics-ga.js"></script>
+  <script src="bower_components/lodash/lodash.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/moment-duration-format/lib/moment-duration-format.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/filters.js"></script>
+  <script src="scripts/config/events.js"></script>
   <script src="scripts/config/urls.js"></script>
   <script src="scripts/controllers/clubrelays.js"></script>
   <script src="scripts/controllers/contact.js"></script>
