--- a/app/index.html
+++ b/app/index.html
@@ -42,9 +42,9 @@
               <md-menu-item><md-button href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
               <md-menu-item><md-button href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
               <md-menu-item><md-button href="#/current_members/board_minutes">Board Minutes</md-button></md-menu-item>
-              <md-menu-item><md-button href="#/current_members/training_resources">Training Resources</md-button></md-menu-item>
-              <md-menu-item><md-button href="#/current_members/">IXC Constitution</md-button></md-menu-item>
-              <md-menu-item><md-button href="#/current_members/">ITC Constitution</md-button></md-menu-item>
+              <!-- <md-menu-item><md-button href="#/current_members/training_resources">Training Resources</md-button></md-menu-item> -->
+              <md-menu-item><md-button target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk">IXC Constitution</md-button></md-menu-item>
+              <md-menu-item><md-button target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ">ITC Constitution</md-button></md-menu-item>
             </md-menu-content>
           </md-menu>
         </div></a>
