Made styling changes and added relay filter and added CNAME file of domains for hosting

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
         <div layout="row" layout-align="center start">
           <a class="footer-logo" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
           <a class="footer-logo" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
-          <a class="footer-logo" href=""><i class="ion-social-instagram-outline"></i></a>
+          <a class="footer-logo" href="https://www.instagram.com/illinitrackclub/"><i class="ion-social-instagram-outline"></i></a>
           <a class="footer-logo" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
         </div>
         <div class="right-align">
