--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="right-align">
           <div>Illinois Track Club</div>
-          <div>Built by: </div>
+          <div>Built by: Mike Kreiser, Tyler Splitt, and Ryan Somerfield</div>
         </div>
       </div>
     </div>
