Updated all pages outside of results

--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,16 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/board_minutes.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/news.css">
+    <link rel="stylesheet" href="styles/prospective_members.css">
+    <link rel="stylesheet" href="styles/races.css">
     <!-- endbuild -->
   </head>
   <body ng-app="itcFrontendApp">
-
 
   <div class="wrapper">
     <div class="header">
@@ -57,14 +63,14 @@
     </div>
 
     <div class="footer">
-      <div class="centered-content padded-content">
+      <div class="container">
         <div layout="row" layout-align="center start">
           <a class="footer-logo" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
           <a class="footer-logo" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
           <a class="footer-logo" href="https://www.instagram.com/illinitrackclub/"><i class="ion-social-instagram-outline"></i></a>
           <a class="footer-logo" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
         </div>
-        <div class="right-align">
+        <div class="masthead" layout="row" layout-align="space-between center">
           <div>Illinois Track Club</div>
           <div>Built by: Mike Kreiser, Tyler Splitt, and Ryan Somerfield</div>
         </div>
