Update records and results tables, grunt build copies CNAME

--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,14 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/board_minutes.css">
+    <link rel="stylesheet" href="styles/club_relays.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/news.css">
     <link rel="stylesheet" href="styles/prospective_members.css">
     <link rel="stylesheet" href="styles/races.css">
+    <link rel="stylesheet" href="styles/results.css">
     <!-- endbuild -->
   </head>
   <body ng-app="itcFrontendApp">
