Finished mobile optimizations

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,6 @@
       <md-toolbar class="md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
         <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
         <span flex></span>
-        <a href="#/"><div class="menu-item">Home</div></a>
         <a href="#/news"><div class="menu-item">News</div></a>
         <a href="#/races"><div class="menu-item">Races</div></a>
         <a href="#/clubrelays"><div class="menu-item">Club Relays</div></a>
@@ -74,7 +73,7 @@
         </div>
         <div class="masthead" layout="row" layout-align="space-between center">
           <div>Illinois Track Club</div>
-          <div>Built by: Mike Kreiser, Tyler Splitt, and Ryan Somerfield</div>
+          <div class="right">Built by: Mike Kreiser, Tyler Splitt, and Ryan Somerfield</div>
         </div>
       </div>
     </div>
