Minor fixes, code cleanup, and commenting

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
   <div class="wrapper">
     <div class="header">
-      <md-toolbar class="md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
+      <md-toolbar class="header-toolbar md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
         <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
         <span flex></span>
         <md-menu>
@@ -61,7 +61,7 @@
                 <md-button class="current-members-button" ng-click="$mdOpenMenu()">
                   Current Members
                 </md-button>
-                <md-menu-content>
+                <md-menu-content width="3">
                   <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
                   <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
                   <md-menu-item><md-button ng-href="#/current_members/board_minutes">Board Minutes</md-button></md-menu-item>
