--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
               <md-button ng-href="#/news">News</md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/races">Races</md-button>
+              <md-button ng-href="#/races">Race Schedule</md-button>
             </md-menu-item>
             <md-menu-item>
               <md-button ng-href="#/clubrelays">Club Relays</md-button>
