--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Illinois Track Club</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <base href="/">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,15 +30,42 @@
     <link rel="stylesheet" href="styles/results.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="itcFrontendApp">
+  <body ng-app="itcFrontendApp" ng-controller="illinoistrackclubController">
 
   <div class="wrapper">
     <div class="header">
       <md-toolbar class="header-toolbar md-menu-toolbar md-whiteframe-4dp" layout="row" layout-align="end center">
-        <a href="#/"><img class="menu-image" src="images/itc_wings.png"></a>
-        <span flex></span>
-        <md-menu>
-          <md-button ng-click="$mdOpenMenu()">
+          <a ng-click="goTo('')"><img class="menu-image" src="images/itc_wings.png"></a>
+          <span flex></span>
+          <div layout="row" layout-align="end center" hide-xs hide-sm>
+            <div class="large-header-item"><a ng-click="goTo('news')">News</a></div>
+            <div class="large-header-item"><a ng-click="goTo('races')">Race Schedule</a></div>
+            <div class="large-header-item"><a ng-click="goTo('clubrelays')">Club Relays</a></div>
+            <div class="large-header-item"><a ng-click="goTo('results')">Results</a></div>
+            <div class="large-header-item"><a ng-click="goTo('prospective_members')">Prospective Members</a></div>
+            <md-menu>
+              <div class="large-header-item large-menu-selector" ng-click="$mdOpenMenu()">
+                Current Members
+              </div>
+              <md-menu-content width="3">
+                <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk">IXC Constitution</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ">ITC Constitution</md-button></md-menu-item>
+              </md-menu-content>
+            </md-menu>
+            <md-menu>
+              <div class="large-header-item large-menu-selector" ng-click="$mdOpenMenu()">
+                Media
+              </div>
+              <md-menu-content width="2">
+                <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
+                <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
+              </md-menu-content>
+            </md-menu>
+            <div class="large-header-item"><a ng-click="goTo('contact')">Contact</a></div>
+          </div>
+        <md-menu hide-gt-sm>
+          <md-button class="md-icon-button menu-button" ng-click="$mdOpenMenu()">
             <i class="icon ion-navicon"></i>
           </md-button>
           <md-menu-content width="4">
@@ -58,15 +86,24 @@
             </md-menu-item>
             <md-menu-item>
               <md-menu>
-                <md-button class="current-members-button" ng-click="$mdOpenMenu()">
+                <md-button class="small-menu-button" ng-click="$mdOpenMenu()">
                   Current Members
                 </md-button>
                 <md-menu-content width="3">
-                  <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
-                  <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
-                  <md-menu-item><md-button ng-href="#/current_members/board_minutes">Board Minutes</md-button></md-menu-item>
+                  <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk">IXC Constitution</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ">ITC Constitution</md-button></md-menu-item>
+                </md-menu-content>
+              </md-menu>
+            </md-menu-item>
+            <md-menu-item>
+              <md-menu>
+                <md-button class="small-menu-button" ng-click="$mdOpenMenu()">
+                  Media
+                </md-button>
+                <md-menu-content width="2">
+                  <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos">Photos</md-button></md-menu-item>
+                  <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow">Videos</md-button></md-menu-item>
                 </md-menu-content>
               </md-menu>
             </md-menu-item>
@@ -136,6 +173,7 @@
   <script src="scripts/controllers/clubrelays.js"></script>
   <script src="scripts/controllers/contact.js"></script>
   <script src="scripts/controllers/home.js"></script>
+  <script src="scripts/controllers/illinoistrackclub.js"></script>
   <script src="scripts/controllers/news.js"></script>
   <script src="scripts/controllers/prospective_members.js"></script>
   <script src="scripts/controllers/races.js"></script>
