Fix mobile menu links

--- a/app/index.html
+++ b/app/index.html
@@ -70,19 +70,19 @@
           </md-button>
           <md-menu-content width="4">
             <md-menu-item>
-              <md-button ng-href="#/news">News</md-button>
+              <md-button ng-click="goTo('news')">News</md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/races">Race Schedule</md-button>
+              <md-button ng-click="goTo('races')">Race Schedule</md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/clubrelays">Club Relays</md-button>
+              <md-button ng-click="goTo('clubrelays')">Club Relays</md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/results">Results</md-button>
+              <md-button ng-click="goTo('results')">Results</md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/prospective_members">Prospective Members</md-button>
+              <md-button ng-click="goTo('prospective_members')">Prospective Members</md-button>
             </md-menu-item>
             <md-menu-item>
               <md-menu>
@@ -108,7 +108,7 @@
               </md-menu>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-href="#/contact">Contact</md-button>
+              <md-button ng-click="goTo('contact')">Contact</md-button>
             </md-menu-item>
           </md-menu-content>
         </md-menu>
