--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
     <title>Illinois Track Club</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <base href="/">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,6 +17,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/404.css">
     <link rel="stylesheet" href="styles/board_minutes.css">
     <link rel="stylesheet" href="styles/club_relays.css">
     <link rel="stylesheet" href="styles/contact.css">
@@ -49,8 +49,8 @@
               </div>
               <md-menu-content width="3">
                 <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
-                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
-                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="{{ANALYTICS.CONSTITUTIONS.IXC}}">IXC Constitution</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="{{ANALYTICS.CONSTITUTIONS.ITC}}">ITC Constitution</md-button></md-menu-item>
               </md-menu-content>
             </md-menu>
             <md-menu>
@@ -58,8 +58,8 @@
                 Media
               </div>
               <md-menu-content width="2">
-                <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos" analytics-on="click" analytics-event="Went to Facebook photos page">Photos</md-button></md-menu-item>
-                <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="Went to YouTube page">Videos</md-button></md-menu-item>
+                <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos" analytics-on="click" analytics-event="{{ANALYTICS.MEDIA.PHOTOS}}">Photos</md-button></md-menu-item>
+                <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.YOUTUBE}}">Videos</md-button></md-menu-item>
               </md-menu-content>
             </md-menu>
             <div class="large-header-item"><a ng-click="goTo('contact')">Contact</a></div>
@@ -91,8 +91,8 @@
                 </md-button>
                 <md-menu-content width="3">
                   <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
-                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
-                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
+                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="{{ANALYTICS.CONSTITUTIONS.IXC}}">IXC Constitution</md-button></md-menu-item>
+                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="{{ANALYTICS.CONSTITUTIONS.IXC}}">ITC Constitution</md-button></md-menu-item>
                 </md-menu-content>
               </md-menu>
             </md-menu-item>
@@ -102,8 +102,8 @@
                   Media
                 </md-button>
                 <md-menu-content width="2">
-                  <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos" analytics-on="click" analytics-event="Went to Facebook photos page">Photos</md-button></md-menu-item>
-                  <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="Went to YouTube page">Videos</md-button></md-menu-item>
+                  <md-menu-item><md-button ng-href="https://www.facebook.com/illinoisxctrackclub/photos" analytics-on="click" analytics-event="{{ANALYTICS.MEDIA.PHOTOS}}">Photos</md-button></md-menu-item>
+                  <md-menu-item><md-button ng-href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.YOUTUBE}}">Videos</md-button></md-menu-item>
                 </md-menu-content>
               </md-menu>
             </md-menu-item>
@@ -122,10 +122,10 @@
     <div class="footer">
       <div class="container">
         <div layout="row" layout-align="center start">
-          <a class="footer-logo" href="https://www.facebook.com/illinoisxctrackclub/" analytics-on="click" analytics-event="Went to Facebook page"><i class="ion-social-facebook"></i></a>
-          <a class="footer-logo" href="https://twitter.com/IlliniTrackClub" analytics-on="click" analytics-event="Went to Twitter page"><i class="ion-social-twitter"></i></a>
-          <a class="footer-logo" href="https://www.instagram.com/illinitrackclub/" analytics-on="click" analytics-event="Went to Instagram page"><i class="ion-social-instagram-outline"></i></a>
-          <a class="footer-logo" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="Went to YouTube page"><i class="ion-social-youtube"></i></a>
+          <a class="footer-logo" href="https://www.facebook.com/illinoisxctrackclub/" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.FACEBOOK}}"><i class="ion-social-facebook"></i></a>
+          <a class="footer-logo" href="https://twitter.com/IlliniTrackClub" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.TWITTER}}"><i class="ion-social-twitter"></i></a>
+          <a class="footer-logo" href="https://www.instagram.com/illinitrackclub/" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.INSTAGRAM}}"><i class="ion-social-instagram-outline"></i></a>
+          <a class="footer-logo" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow" analytics-on="click" analytics-event="{{ANALYTICS.SOCIAL.YOUTUBE}}"><i class="ion-social-youtube"></i></a>
         </div>
         <div class="masthead" layout="row" layout-align="space-between center">
           <div>Illinois Track Club</div>
@@ -168,6 +168,7 @@
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/filters.js"></script>
+  <script src="scripts/config/analytics.js"></script>
   <script src="scripts/config/events.js"></script>
   <script src="scripts/config/urls.js"></script>
   <script src="scripts/controllers/clubrelays.js"></script>
