Fix Chrome-based touch scrolling issue

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
               </div>
               <md-menu-content width="3">
                 <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
-                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution}">IXC Constitution</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
                 <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
               </md-menu-content>
             </md-menu>
@@ -91,7 +91,7 @@
                 </md-button>
                 <md-menu-content width="3">
                   <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
-                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution}">IXC Constitution</md-button></md-menu-item>
+                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
                 </md-menu-content>
               </md-menu>
