--- a/app/index.html
+++ b/app/index.html
@@ -198,6 +198,7 @@
   <script src="scripts/controllers/current_members/board_minutes.js"></script>
   <script src="scripts/controllers/current_members/training_resources.js"></script>
   <script src="scripts/services/api.js"></script>
+  <script src="scripts/services/apiUrl.js"></script>
   <!-- endbuild -->
 </body>
 </html>
