first commit training resources

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/404.css">
     <link rel="stylesheet" href="styles/board_minutes.css">
+    <link rel="stylesheet" href="styles/training_resources.css">
     <link rel="stylesheet" href="styles/home_meets.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/header.css">
@@ -57,6 +58,7 @@
               </div>
               <md-menu-content width="3">
                 <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
+                <md-menu-item><md-button ng-click="goTo('current_members/training_resources')">Training Resources</md-button></md-menu-item>
                 <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
                 <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
               </md-menu-content>
@@ -107,6 +109,7 @@
                 </md-button>
                 <md-menu-content width="3">
                   <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
+                  <md-menu-item><md-button ng-click="goTo('current_members/training_resources')">Training Resources</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSbFd2QXZWVER3RDQ" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
                 </md-menu-content>
@@ -186,6 +189,7 @@
   <script src="scripts/filters.js"></script>
   <script src="scripts/config/events.js"></script>
   <script src="scripts/config/urls.js"></script>
+  <script src="scripts/config/tags.js"></script>
   <script src="scripts/controllers/home_meets/clubrelays.js"></script>
   <script src="scripts/controllers/home_meets/clubpeaks.js"></script>
   <script src="scripts/controllers/contact.js"></script>
