--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
               <md-menu-content width="3">
                 <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
                 <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
-                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/file/d/116Vn40qq2Qxm-ClOiSc9Qw7JbztQx2bu/view?usp=sharing" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
+                <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/file/d/1QFxe82mPKjr23-IFJWqSpJxTwB2PHpxn/view?usp=sharing" analytics-on="click" analytics-event="Opened ITFC Constitution">ITFC Constitution</md-button></md-menu-item>
               </md-menu-content>
             </md-menu>
             <md-menu>
@@ -108,7 +108,7 @@
                 <md-menu-content width="3">
                   <md-menu-item><md-button ng-click="goTo('current_members/board_minutes')">Board Minutes</md-button></md-menu-item>
                   <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/open?id=0B9IJ7PBOO1nSWFlMcVZULVdwUkk" analytics-on="click" analytics-event="Opened IXC Constitution">IXC Constitution</md-button></md-menu-item>
-                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/file/d/116Vn40qq2Qxm-ClOiSc9Qw7JbztQx2bu/view?usp=sharing" analytics-on="click" analytics-event="Opened ITC Constitution">ITC Constitution</md-button></md-menu-item>
+                  <md-menu-item><md-button target="_blank" ng-href="https://drive.google.com/file/d/1QFxe82mPKjr23-IFJWqSpJxTwB2PHpxn/view?usp=sharing" analytics-on="click" analytics-event="Opened ITFC Constitution">ITFC Constitution</md-button></md-menu-item>
                 </md-menu-content>
               </md-menu>
             </md-menu-item>
